<resources>
    <string name="app_name">ClubOlympus</string>
    <string name="enter_you_first_name">Enter you First name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="enter_you_last_name">Enter you Last name</string>
    <string name="group">Group</string>
    <string name="enter_you_group">Enter you group</string>
    <string name="first_name">First Name</string>
</resources>
