<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".AddMemberActivity">

    <TextView
        android:id="@+id/firstNameTextView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/first_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/firstNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_you_first_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastNameTextView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/last_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/lastNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTextView" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/gender"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/genderSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTextView" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_you_last_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText" />

    <TextView
        android:id="@+id/groupTextView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/group"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/groupEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderTextView" />

    <EditText
        android:id="@+id/groupEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_you_group"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>